# rsproxy

./: package-lock.json  package.json  tsconfig.json
src/: App.svelte  features.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: exchange.rs  lib.rs  main.rs  proxy.rs  types.rs
src-tauri/src/common/: string.rs
src-tauri/src/http_parser/: body.rs  header.rs  mod.rs  request.rs
src-tauri/src/http_util/: body.rs  config.rs  encode.rs  error.rs  header.rs  mod.rs  request.rs  response.rs  tls.rs  traits.rs
src/lib/: common.ts  datas.ts  exchange.ts  types.ts
src/lib/components/anExchangeEditor/: anExchangeEditor.css  anExchangeEditor.css.map  anExchangeEditor.svelte
src/lib/components/box/: Box.svelte  box.css  box.css.map  box.scss  box.svelte
src/lib/components/button/: button.css  button.css.map  button.scss  button.svelte
src/lib/components/caption/: Caption.svelte  caption.css  caption.css.map  caption.scss
src/lib/components/dummy/: Dummy.svelte
src/lib/components/exchangeEditor/: ExchangeEditor.svelte  exchangeEditor.css  exchangeEditor.css.map  exchangeEditor.scss  exchangeEditor.svelte
src/lib/components/exchangeEditor/editor/: Editor.svelte  editor.css  editor.css.map  editor.scss
src/lib/components/exchangePart/: ExchangePart.svelte  exchangePart.css  exchangePart.css.map  exchangePart.scss
src/lib/components/select/: Select.svelte  select.css  select.css.map  select.scss
src/lib/components/sidebar/: Sidebar.svelte  sidebar.css  sidebar.css.map  sidebar.scss  sidebar.svelte
src/lib/components/switch/: Switch.svelte  switch.css  switch.css.map  switch.scss  switch.svelte
src/lib/components/tabs/: Tabs.svelte  tabs.css  tabs.css.map  tabs.scss
src/lib/components/textInput/: TextInput.svelte  textInput.css  textInput.css.map  textInput.scss
src/lib/home/: Home.svelte
src/lib/proxy/: Proxy.svelte  data.ts  proxy.scss  proxy.svelte  proxy.ts
src/lib/proxy/history/: History.svelte  List.svelte  Viewer.svelte  history.css  history.css.map  history.scss  history.svelte  history.ts
src/lib/proxy/history/scss/: history.css  history.css.map  history.scss  list.css  list.css.map  list.scss  viewer.css  viewer.css.map  viewer.scss
src/lib/proxy/pilot/: Controller.svelte  Pilot.svelte  pilot.css  pilot.css.map  pilot.scss  pilot.svelte
src/lib/proxy/pilot/scss/: controller.css  controller.css.map  controller.scss  pilot.css  pilot.css.map  pilot.scss
src/lib/proxy/scss/: proxy.css  proxy.css.map  proxy.scss
src/scss/: _rule.scss  _theme.scss  app.css  app.css.map  app.scss  styles.css  styles.css.map  styles.scss
