[package]
name = "web-sleuth"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
# serde = { version = "1.0" }
# serde_json = { version = "1.0.105" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
thiserror = { version = "1.0.47" }
reqwest = { version = "0.11.20", features = ["gzip", "deflate"] }
tower = { version = "0.4.13", features = ["full"] }
serde = "1.0.188"
serde_json = "1.0.106"
async-trait = "0.1.73"
bytes = "1.5.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
